--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <h1>Academic <br> Analyst <br> Activist</h1>
             <a href="resume.pdf" target="_blank"><button type="button" name="button" class="btn btn-lg download-button-left lato-font">
               <span class="fa-regular fa-file"></span> Resume</button></a>
-            <a href="mailto:hltg90@gmail.com" target="_blank"></a><button type="button" name="button" class="btn btn-outline-light btn-lg download-button-right lato-font">
+            <a href="mailto:hltg90@gmail.com" target="_blank"><button type="button" name="button" class="btn btn-outline-light btn-lg download-button-right lato-font">
               <span class="fa-regular fa-envelope"></span> Email Me</button></a>
           </div>
           <div class="col-lg-6">
